# ethSTARK

./: .clang-format  CMakeLists.txt  CPPLINT.cfg  Dockerfile  README.md  install_deps.sh  run_linter.sh
example/: random_private_input.py  (+2 more)
src/starkware/: CMakeLists.txt  conftest.py
src/starkware/air/: CMakeLists.txt  air.h  air_test_utils.cc  air_test_utils.h  air_test_utils_test.cc  trace.h
src/starkware/air/boundary/: CMakeLists.txt  boundary_air.h  boundary_air_test.cc
src/starkware/air/rescue/: CMakeLists.txt  rescue_air.cc  rescue_air.h  rescue_air.inl  rescue_air_test.cc  rescue_air_utils.cc  rescue_air_utils.h  rescue_air_utils_test.cc  rescue_constants.h  rescue_constants.py  rescue_constants.sage  rescue_constants_test.cc  rescue_hash.py  rescue_hash_test.py
src/starkware/air/test_air/: CMakeLists.txt  test_air.cc  test_air.h  test_air.inl  test_air_test.cc
src/starkware/air/ziggy/: CMakeLists.txt  ziggy_air.cc  ziggy_air.h  ziggy_air.inl  ziggy_air_test.cc
src/starkware/algebra/: CMakeLists.txt  field_element_base.h  field_element_base.inl  field_element_base_test.cc  field_operations.h  field_operations.inl  field_operations_test.cc  polynomials.h  polynomials.inl  polynomials_test.cc
src/starkware/algebra/domains/: CMakeLists.txt  coset.h  coset_test.cc  evaluation_domain.cc  evaluation_domain.h  evaluation_domain_test.cc
src/starkware/algebra/fft/: CMakeLists.txt  fft.h  fft.inl  fft_test.cc  multiplicative_group_ordering.h
src/starkware/algebra/fields/: CMakeLists.txt  base_field_element.cc  base_field_element.h  base_field_element.inl  base_field_element_test.cc  extension_field_element.h  extension_field_element.inl  extension_field_element_test.cc
src/starkware/algebra/lde/: CMakeLists.txt  cached_lde_manager.h  cached_lde_manager.inl  cached_lde_manager_test.cc  lde_manager.h  lde_manager.inl  lde_manager_mock.h  lde_manager_test.cc
src/starkware/benchmarks/: CMakeLists.txt  rescue_prover_benchmark.cc  rescue_verifier_benchmark.cc  ziggy_prover_benchmark.cc  ziggy_verifier_benchmark.cc
src/starkware/channel/: CMakeLists.txt  annotation_scope.h  annotation_scope_test.cc  channel.cc  channel.h  channel_statistics.h  channel_test.cc  channel_utils.cc  channel_utils.h  proof_of_work.cc  proof_of_work.h  proof_of_work_test.cc  prover_channel.cc  prover_channel.h  prover_channel_mock.h  prover_channel_test.cc  verifier_channel.cc  verifier_channel.h  verifier_channel_mock.h
src/starkware/commitment_scheme/: CMakeLists.txt  commitment_scheme.h  commitment_scheme_builder.cc  commitment_scheme_builder.h  commitment_scheme_mock.h  commitment_scheme_test.cc  packaging_commitment_scheme.cc  packaging_commitment_scheme.h  packaging_commitment_scheme_test.cc  packer_hasher.cc  packer_hasher.h  row_col.h  salted_commitment_scheme.cc  salted_commitment_scheme.h  salted_commitment_scheme_test.cc  table_impl_details.cc  table_impl_details.h  table_prover.h  table_prover_impl.h  table_prover_impl.inl  table_prover_impl_test.cc  table_prover_mock.h  table_verifier.h  table_verifier_impl.h  table_verifier_impl.inl  table_verifier_impl_test.cc  table_verifier_mock.h
src/starkware/commitment_scheme/merkle/: CMakeLists.txt  merkle.cc  merkle.h  merkle_commitment_scheme.cc  merkle_commitment_scheme.h  merkle_test.cc
src/starkware/composition_polynomial/: CMakeLists.txt  breaker.cc  breaker.h  breaker_test.cc  composition_polynomial.h  composition_polynomial.inl  composition_polynomial_mock.h  composition_polynomial_test.cc  neighbors.cc  neighbors.h  neighbors_test.cc  periodic_column.cc  periodic_column.h  periodic_column.inl  periodic_column_test.cc
src/starkware/crypt_tools/: CMakeLists.txt  blake2s_160.h  blake2s_160.inl  blake2s_160_test.cc  blake2s_256.h  blake2s_256.inl  blake2s_256_test.cc
src/starkware/error_handling/: CMakeLists.txt  error_handling.cc  error_handling.h  error_handling_test.cc  test_utils.h
src/starkware/fri/: CMakeLists.txt  fri_committed_layer.cc  fri_committed_layer.h  fri_committed_layer_test.cc  fri_details.cc  fri_details.h  fri_details_test.cc  fri_folder.cc  fri_folder.h  fri_layer.cc  fri_layer.h  fri_layer_test.cc  fri_parameters.h  fri_prover.cc  fri_prover.h  fri_test.cc  fri_test_utils.h  fri_verifier.cc  fri_verifier.h
src/starkware/gbenchmark/: CMakeLists.txt  gbenchmark_main.cc
src/starkware/gtest/: CMakeLists.txt  gtest_main.cc
src/starkware/main/: CMakeLists.txt  prover_main_helper.cc  prover_main_helper.h  test_utils.py  verifier_main_helper.cc  verifier_main_helper.h
src/starkware/main/rescue/: CMakeLists.txt  rescue_end_to_end_test.py  rescue_prover_main.cc  rescue_verifier_main.cc
src/starkware/main/ziggy/: CMakeLists.txt  ziggy_end_to_end_test.py  ziggy_prover_main.cc  ziggy_verifier_main.cc
src/starkware/math/: CMakeLists.txt  math.h  math_test.cc
src/starkware/proof_system/: proof_system.cc  proof_system.h  proof_system_test.cc
src/starkware/randomness/: CMakeLists.txt  hash_chain.cc  hash_chain.h  hash_chain_test.cc  prng.cc  prng.h  prng_test.cc
src/starkware/stark/: CMakeLists.txt  committed_trace.h  committed_trace.inl  committed_trace_mock.h  committed_trace_test.cc  composition_oracle.cc  composition_oracle.h  composition_oracle_test.cc  oods.cc  oods.h  oods_test.cc  stark.cc  stark.h  stark_test.cc  test_utils.h  utils.h  utils.inl
src/starkware/statement/: CMakeLists.txt  statement.h
src/starkware/statement/rescue/: CMakeLists.txt  rescue_statement.cc  rescue_statement.h  rescue_statement_test.cc
src/starkware/stl_utils/: CMakeLists.txt  containers.h  containers_test.cc
src/starkware/utils/: CMakeLists.txt  attributes.h  bit_reversal.h  bit_reversal.inl  bit_reversal_test.cc  flag_validators.cc  flag_validators.h  input_utils.cc  input_utils.h  json.cc  json.h  json.inl  json_builder.h  json_test.cc  maybe_owned_ptr.h  maybe_owned_ptr_test.cc  profiling.cc  profiling.h  profiling_test.cc  serialization.h  serialization_test.cc  task_manager.cc  task_manager.h  task_manager.inl  task_manager_test.cc  to_from_string.cc  to_from_string.h  to_from_string_test.cc
(+10 files in other folders)
