# Sets paths so that relative paths to src could be resolved
set(BASEPATH "${CMAKE_SOURCE_DIR}")
include_directories("${BASEPATH}")

set(STARKWARE_COMMON_LIBS task_manager error_handling to_from_string)
add_library(starkware_common INTERFACE)
target_link_libraries(starkware_common INTERFACE ${STARKWARE_COMMON_LIBS})

add_subdirectory(air)
add_subdirectory(algebra)
add_subdirectory(channel)
add_subdirectory(commitment_scheme)
add_subdirectory(composition_polynomial)
add_subdirectory(crypt_tools)
add_subdirectory(error_handling)
add_subdirectory(fri)
add_subdirectory(gtest)
add_subdirectory(main)
add_subdirectory(math)
add_subdirectory(proof_system)
add_subdirectory(randomness)
add_subdirectory(stark)
add_subdirectory(statement)
add_subdirectory(stl_utils)
add_subdirectory(utils)
add_subdirectory(benchmarks)
add_subdirectory(gbenchmark)
