add_library(algebra INTERFACE)
target_link_libraries(algebra INTERFACE domains fields prng third_party)

add_executable(field_operations_test field_operations_test.cc)
target_link_libraries(field_operations_test algebra starkware_gtest)
add_test(field_operations_test field_operations_test)

add_executable(field_element_base_test field_element_base_test.cc)
target_link_libraries(field_element_base_test algebra starkware_gtest)
add_test(field_element_base_test field_element_base_test)

add_executable(polynomials_test polynomials_test.cc)
target_link_libraries(polynomials_test algebra starkware_gtest)
add_test(polynomials_test polynomials_test)

add_subdirectory(domains)
add_subdirectory(fields)
add_subdirectory(fft)
add_subdirectory(lde)
