add_executable(rescue_prover_benchmark rescue_prover_benchmark.cc)
target_link_libraries(rescue_prover_benchmark prover_main_helper rescue_statement starkware_common starkware_gbenchmark input_utils)

add_executable(rescue_verifier_benchmark rescue_verifier_benchmark.cc)
target_link_libraries(rescue_verifier_benchmark verifier_main_helper prover_main_helper rescue_statement starkware_common starkware_gbenchmark input_utils)

add_executable(ziggy_prover_benchmark ziggy_prover_benchmark.cc)
target_link_libraries(ziggy_prover_benchmark prover_main_helper ziggy_statement starkware_common starkware_gbenchmark input_utils)

add_executable(ziggy_verifier_benchmark ziggy_verifier_benchmark.cc)
target_link_libraries(ziggy_verifier_benchmark verifier_main_helper prover_main_helper ziggy_statement starkware_common starkware_gbenchmark input_utils)
