add_library(table table_impl_details.cc)
target_link_libraries(table algebra channel)

add_executable(table_prover_impl_test table_prover_impl_test.cc)
target_link_libraries(table_prover_impl_test merkle_commitment_scheme table starkware_gtest)
add_test(table_prover_impl_test table_prover_impl_test)

add_library(salted_commitment_scheme salted_commitment_scheme.cc)
target_link_libraries(salted_commitment_scheme channel merkle_commitment_scheme)

add_library(packaging_commitment_scheme commitment_scheme_builder.cc packaging_commitment_scheme.cc)
target_link_libraries(packaging_commitment_scheme packer_hasher channel merkle_commitment_scheme salted_commitment_scheme)

add_executable(table_verifier_impl_test table_verifier_impl_test.cc)
target_link_libraries(table_verifier_impl_test merkle_commitment_scheme packaging_commitment_scheme table starkware_gtest)
add_test(table_verifier_impl_test table_verifier_impl_test)

add_library(packer_hasher packer_hasher.cc)

add_executable(packaging_commitment_scheme_test packaging_commitment_scheme_test.cc)
target_link_libraries(packaging_commitment_scheme_test packaging_commitment_scheme packer_hasher channel starkware_gtest)
add_test(packaging_commitment_scheme_test packaging_commitment_scheme_test)

add_executable(salted_commitment_scheme_test salted_commitment_scheme_test.cc)
target_link_libraries(salted_commitment_scheme_test salted_commitment_scheme channel starkware_gtest)
add_test(salted_commitment_scheme_test salted_commitment_scheme_test)

add_executable(commitment_scheme_test commitment_scheme_test.cc)
target_link_libraries(commitment_scheme_test merkle_commitment_scheme packaging_commitment_scheme channel starkware_gtest)
add_test(commitment_scheme_test commitment_scheme_test)

add_subdirectory(merkle)
