add_library(breaker breaker.cc)

add_library(periodic_column periodic_column.cc)
target_link_libraries(periodic_column algebra)

add_executable(periodic_column_test periodic_column_test.cc)
target_link_libraries(periodic_column_test periodic_column algebra starkware_gtest)
add_test(periodic_column_test periodic_column_test)

add_library(neighbors neighbors.cc)
target_link_libraries(neighbors algebra)

add_executable(neighbors_test neighbors_test.cc)
target_link_libraries(neighbors_test neighbors algebra starkware_gtest)
add_test(neighbors_test neighbors_test)

add_library(composition_polynomial INTERFACE)
target_link_libraries(composition_polynomial INTERFACE periodic_column neighbors)

add_executable(composition_polynomial_test composition_polynomial_test.cc)
target_link_libraries(composition_polynomial_test composition_polynomial algebra task_manager starkware_gtest)
add_test(composition_polynomial_test composition_polynomial_test)

add_executable(breaker_test breaker_test.cc)
target_link_libraries(breaker_test algebra breaker starkware_gtest)
add_test(breaker_test breaker_test)
